--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,6 @@
 {
-    "presets":["es2015","stage-0","env","react"]
+    "presets":["es2015","stage-0","env","react"],
+    "plugins": [["import", {
+        "libraryName": "antd"
+    }]]
 }
