--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "test",
-    "build": "webpack --config ./client/build/webpack.dev.config.js",
+    "build": "webpack --watch --config ./client/build/webpack.dev.config.js",
     "remove": ""
   },
   "repository": {
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/Hyihong/myAdmin#readme",
   "dependencies": {
+    "antd": "^2.10.1",
     "koa": "^2.2.0",
     "koa-ejs": "^4.0.0",
     "koa-router": "^7.1.1",
@@ -29,10 +30,13 @@
   "devDependencies": {
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
+    "babel-plugin-import": "^1.1.1",
     "babel-preset-env": "^1.4.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "css-loader": "^0.28.1",
+    "less-loader": "^4.0.3",
     "webpack": "^2.5.1"
   }
 }
