--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,10 @@
 {
-    "presets":["es2015","stage-0","env","react"],
-    "plugins": [["import", {
-        "libraryName": "antd"
-    }]]
+    "presets":["react","es2015","stage-0"],
+    "plugins": [
+         ["import", { 
+             "libraryName": "antd", 
+             "style": true
+             }
+          ] // `style: true` 会加载 less 文件
+      ]
 }
