--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "test",
-    "build": "webpack --watch --config ./client/build/webpack.dev.config.js",
+    "dev": "webpack --watch --config ./client/build/webpack.dev.config.js",
+    "pro": "webpack --config ./client/build/webpack.pro.config.js",
     "remove": ""
   },
   "repository": {
@@ -36,7 +37,13 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.28.1",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "less": "^2.7.2",
     "less-loader": "^4.0.3",
-    "webpack": "^2.5.1"
-  }
+    "optimize-css-assets-webpack-plugin": "^1.3.2",
+    "style-loader": "^0.17.0",
+    "webpack": "^2.5.1",
+    "webpack-merge": "^4.1.0"
+  },
+  "theme": "./theme.js"
 }
