--- a/.babelrc
+++ b/.babelrc
@@ -5,6 +5,6 @@
              "libraryName": "antd", 
              "style": true
              }
-          ] // `style: true` 会加载 less 文件
+          ] // `style: css` 会加载 css 文件
       ]
 }
