--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "koa-router": "^7.1.1",
     "koa-static": "^3.0.0",
     "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "react-dom": "^15.5.4",
+    "screenfull": "^3.2.0"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
@@ -45,5 +46,5 @@
     "webpack": "^2.5.1",
     "webpack-merge": "^4.1.0"
   },
-  "theme":"./theme.js"
+  "theme": "./theme.js"
 }
