--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.28.1",
     "extract-text-webpack-plugin": "^2.1.0",
+    "html-webpack-plugin": "^2.28.0",
     "less": "^2.7.2",
     "less-loader": "^4.0.3",
     "optimize-css-assets-webpack-plugin": "^1.3.2",
