--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test",
     "dev": "npm run clean && webpack --watch --config ./client/build/webpack.dev.config.js",
     "pro": "npm run clean && webpack --config ./client/build/webpack.pro.config.js",
-    "clean" :"node ./client/build/cleanGenerator.js",
+    "clean": "node ./client/build/cleanGenerator.js",
     "remove": ""
   },
   "repository": {
@@ -29,6 +29,7 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
     "screenfull": "^3.2.0"
   },
   "devDependencies": {
