--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/Hyihong/myAdmin#readme",
   "dependencies": {
     "antd": "^2.10.1",
+    "babel-polyfill": "^6.23.0",
     "koa": "^2.2.0",
     "koa-ejs": "^4.0.0",
     "koa-router": "^7.1.1",
@@ -30,22 +31,29 @@
     "react-dom": "^15.5.4",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
-    "screenfull": "^3.2.0"
+    "screenfull": "^3.2.0",
+    "transform-runtime": "0.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
-    "babel-plugin-import": "^1.1.1",
-    "babel-preset-env": "^1.4.0",
+    "babel-plugin-import": "^1.2.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.5.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "babel-register": "^6.24.1",
     "css-loader": "^0.28.1",
+    "css-modules-require-hook": "^4.0.6",
     "ejs": "^2.5.6",
     "extract-text-webpack-plugin": "^2.1.0",
     "html-webpack-plugin": "^2.28.0",
+    "install": "^0.10.1",
     "less": "^2.7.2",
     "less-loader": "^4.0.3",
+    "node-less": "^1.0.0",
+    "npm": "^5.0.1",
     "optimize-css-assets-webpack-plugin": "^1.3.2",
     "style-loader": "^0.17.0",
     "webpack": "^2.5.1",
