--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "antd": "^2.10.1",
     "babel-polyfill": "^6.23.0",
+    "fetch": "^1.1.0",
     "koa": "^2.2.0",
     "koa-ejs": "^4.0.0",
     "koa-router": "^7.1.1",
@@ -31,8 +32,10 @@
     "react-dom": "^15.5.4",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
+    "reqwest": "^2.0.5",
     "screenfull": "^3.2.0",
-    "transform-runtime": "0.0.0"
+    "transform-runtime": "0.0.0",
+    "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
