--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "antd": "^2.10.1",
     "babel-polyfill": "^6.23.0",
     "fetch": "^1.1.0",
+    "isomorphic-fetch": "^2.2.1",
     "koa": "^2.2.0",
     "koa-ejs": "^4.0.0",
     "koa-router": "^7.1.1",
